--- a/linux-custom/PKGBUILD
+++ b/linux-custom/PKGBUILD
@@ -4,16 +4,16 @@
 
 #pkgbase=linux               # Build stock -ARCH kernel
 pkgbase=linux-custom       # Build kernel with a different name
-_srcname=linux-3.11-rc7
-pkgver=3.11rc7
-_pkgver=3.11-rc7
+_srcname=linux-3.11
+pkgver=3.11
+_pkgver=3.11
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc')
 options=('!strip')
-source=("http://www.kernel.org/pub/linux/kernel/v3.x/testing/${_srcname}.tar.xz"
+source=("http://www.kernel.org/pub/linux/kernel/v3.x/${_srcname}.tar.xz"
         # the main kernel config files
         'config' 'config.x86_64'
         # laptop config
@@ -23,10 +23,10 @@ source=("http://www.kernel.org/pub/linux/kernel/v3.x/testing/${_srcname}.tar.xz"
         'change-default-console-loglevel.patch'
         'criu-no-expert.patch'
         "linux-${_pkgver}-custom.patch")
-md5sums=('c98bfc6a4b2b5f274df0d9dc0dd2fc3a'
+md5sums=('fea363551ff45fbe4cb88497b863b261'
          '007582f36e5386f66460dcd075e2c04c'
          'aa6a56c9cb67004ce47831e1e0f43ce6'
-         '4601a3e4700fd5ef5828b98658f396e4'
+         '5a3ff27546186135bfcf3528435a2341'
          'eb14dcfd80c00852ef81ded6e826826a'
          'ca3e3adbc8ea22ee57d9a82e07b7d035'
          'd50c1ac47394e9aec637002ef3392bd1'
