--- a/linux-custom/PKGBUILD
+++ b/linux-custom/PKGBUILD
@@ -6,8 +6,8 @@
 pkgbase=linux-custom       # Build kernel with a different name
 _srcname=linux-3.13
 _basever=3.13
-pkgver=3.13.5
-pkgrel=2
+pkgver=3.13.6
+pkgrel=1
 arch=('i686' 'x86_64')
 url="http://www.kernel.org/"
 license=('GPL2')
@@ -19,14 +19,12 @@ source=("http://www.kernel.org/pub/linux/kernel/v3.x/${_srcname}.tar.xz"
         'config' 'config.x86_64'
         # standard config files for mkinitcpio ramdisk
         'linux.preset'
-        "linux-custom-${pkgver}.patch"
         )
 md5sums=('0ecbaf65c00374eb4a826c2f9f37606f'
-         '114c391a592131f1c12544e063173a45'
+         'a9b131a589a176b4c437b8ca4557b85e'
          'ba4468d313adfaf22368add7f58204aa'
          '946c6e240511825159721370dc7ec8cd'
-         'eb14dcfd80c00852ef81ded6e826826a'
-         '71901c4ee5920ba6d7af33432af487be')
+         'eb14dcfd80c00852ef81ded6e826826a')
 
 _kernelname=${pkgbase#linux}
 
@@ -43,7 +41,7 @@ prepare() {
   patch -Np1 -i "${srcdir}/patch-${pkgver}"
 
   # Custom patch
-  patch -Np1 -i "${srcdir}/linux-custom-${pkgver}.patch"
+  #patch -Np1 -i "${srcdir}/linux-custom-${pkgver}.patch"
 
   if [ "${CARCH}" = "x86_64" ]; then
     cat "${srcdir}/config.x86_64" > ./.config
