--- a/decklink-lts/PKGBUILD
+++ b/decklink-lts/PKGBUILD
@@ -6,14 +6,14 @@ pkgver=10.3.5
 pkgrel=1
 pkgdesc="Drivers for Blackmagic Design DeckLink, Intensity or Multibridge video editing cards"
 arch=('i686' 'x86_64')
-url="https://www.blackmagicdesign.com/"
+url="https://www.blackmagicdesign.com/support"
 license=('custom')
 depends=('libxml2' 'mesa' 'qt4' 'libpng')
 makedepends=('linux-lts-headers')
 conflicts=('decklink')
 options=('!strip')
 install='decklink-lts.install'
-source=("http://software.blackmagicdesign.com/DesktopVideo/Blackmagic_Desktop_Video_Linux_${pkgver}.tar.gz"
+source=("Blackmagic_Desktop_Video_Linux_${pkgver}.tar.gz"
         'decklink.conf')
 md5sums=('8c88a6374695a418007027df0c2680db'
          '4f2033439305c4ce8e9d50f55d5c46d8')
