--- a/decklink-lts/PKGBUILD
+++ b/decklink-lts/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="Drivers for Blackmagic Design DeckLink, Intensity or Multibridge video 
 arch=('i686' 'x86_64')
 url="https://www.blackmagicdesign.com/support"
 license=('custom')
-depends=('libxml2' 'mesa' 'qt4' 'libpng')
+depends=('libxml2' 'linux-lts' 'mesa' 'qt4' 'libpng')
 makedepends=('linux-lts-headers')
 conflicts=('decklink')
 options=('!strip')
